# MLDiff

./: .gitignore  CITATION.bib  LICENSE.txt  README.md  pyproject.toml  pytest.ini  requirements.txt  tmp.py
examples/: cifar.py  cifar_diff_dt_svm.py  cifar_diff_dt_svm_gray.py  digits_diff.py  digits_diff_dt_dt.py  digits_diff_dt_svm.py  digits_diff_pca_dt_svm.py  digits_svm.py  iris_diff.py  iris_diff_dt_logReg.py  iris_diff_mlp_svm.py  iris_diffout.py  iris_dt.py  iris_knn.py  iris_logReg.py  iris_mlp.py  iris_svm.py  olivetti_diff_dt_dt.py  olivetti_diff_dt_svm.py
mldiff/: diff.py  diff_matrix.py  dt2smt.py  helper.py  logReg2smt.py  minimizer.py  mlp2smt.py  svm2smt.py  util.py
models/: cancer_dt.joblib  cancer_logreg.joblib  cancer_mlp_10.joblib  cancer_svm.joblib  digits_dt.joblib  digits_logreg.joblib  digits_mlp_10.joblib  digits_mlp_20.joblib  digits_svm.joblib  iris_dt.joblib  iris_logreg.joblib  iris_mlp_20.joblib  iris_mlp_25.joblib  iris_svm.joblib  olivetti_dt_withPCA.joblib  olivetti_logReg_example.joblib  olivetti_logreg_withPCA.joblib  olivetti_mlp_20_withPCA.joblib  olivetti_pca.joblib  olivetti_svm_withPCA.joblib
sefm2025/: accuracy.py  diff.py  effectiveness.py  part1.py  part1_dt.joblib  part1_svm.joblib  part2.py  rq1.py  rq2-4.py  rq3_overhead.py  run_script_generator.py  translation.py
sefm2025/results/: accuracy.txt  accuracy_f1-score.txt  dt.smt2  effectiveness.txt  spurious.txt  svm.smt2  time_ratio_between_rq2-3.txt  time_rq2.txt  (+4 more)
tests/: helper.py  testClf2SmtDigits.py  testClf2SmtIris.py  testClf2SmtOlivetti.py  testMinimizer.py
(+245 files in other folders)
