[tool.poetry]
name = "mldiff"
version = "0.1.0"
description = ""
authors = ["Soaibuzzaman <soaibuzzaman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
z3-solver = "^4.15.3.0"
scikit-learn = "1.4.2"
numpy = "^2.3.2"
ucimlrepo = "^0.0.7"
matplotlib = "^3.10.5"
prettytable = "^3.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
